# SpiderChart

./: .editorconfig  .gitignore  Cargo.toml  Default ASTM E2597 Example.toml  README.md  build.rs
cvi/: SpiderChart-DE.lwl  SpiderChart-EN.lwl  SpiderChart.c  SpiderChart.cws  SpiderChart.h  SpiderChart.lwd  SpiderChart.prj  SpiderChart.tui  SpiderChart.uir  SpiderChartBind.h
hlp/: Head.html  SpiderChart-DE.chm  SpiderChart-DE.hhc  SpiderChart-DE.hhk  SpiderChart-DE.hhp  SpiderChart-DE.html  SpiderChart-DE.md  SpiderChart-EN.chm  SpiderChart-EN.hhc  SpiderChart-EN.hhk  SpiderChart-EN.hhp  SpiderChart-EN.html  SpiderChart-EN.md  build.cmd  poppins.css
lib/: cvi.lib  cviauto.lib  cvistart.lib  instrsup_start.lib  localui.lib
res/: SpiderChart.rc  SpiderChart.res
src/: chart_values_ini.rs  chart_values_toml.rs  localui.rs  main.rs  main_callbacks.rs  main_utils.rs  spiderchart.rs  spiderchart_draw.rs  tables.rs  user_int.rs  user_int_ex.rs
